[project]
name = 'whl-nanoradar-conftool'
authors = [
  { name = "Pride Leong", email = "lykling.lyk@gmail.com" }
]
description = "config tool for serial devices"
requires-python = ">3.8"
dynamic = ["dependencies", "version", "readme"]

[project.scripts]
whl-nanoradar-conftool = "whl_nanoradar_conftool:main"

[project.urls]
"Homepage" = "https://github.com/wheelos-tools/whl-nanoradar-conftool/tree/main"
"Bug Tracker" = "https://github.com/wheelos-tools/whl-nanoradar-conftool/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
py-modules = ["whl_nanoradar_conftool"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "whl_nanoradar_conftool.VERSION"}
readme = {file = "README.md"}

[tool.setuptools.packages]
find = {}
